--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                     <div class="row">
                                         <div class="buttons">
                                             <a href="Resume.pdf" class="btn padd-15"
-                                                download="Resume_Manish Wani.pdf">Download CV</a>
+                                                download="Resume_Manish Wani.pdf">Download Resume</a>
                                             <a href="#contact" class="btn hire-me padd-15">Hire Me</a>
                                         </div>
                                     </div>
