--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                                     <div class="row">
                                         <div class="buttons">
                                             <a href="Resume.pdf" class="btn padd-15"
-                                                download="Resume_Manish Wani.pdf">Download Resume</a>
-                                            <a href="#contact" class="btn hire-me padd-15">Hire Me</a>
+                                                download="Resume_Manish Wani.pdf">Resume</a>
+                                            <!-- <a href="#contact" class="btn hire-me padd-15">Hire Me</a> -->
                                         </div>
                                     </div>
                                 </div>
@@ -244,9 +244,10 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="images\portfolio\portfolio-1.jpg" alt="">
+                                    <img src="Project1.jpg" alt="">
                                 </div>
                             </div>
+                            <span>Bank Management System</span>
                         </div>
                         <!-- Portfolio item End -->
                         <!-- Portfolio item start -->
