--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <a href="#contact" class="btn hire-me">Hire Me</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="Manish.jpg" alt="">
+                            <img src="manish.png" alt="">
                         </div>
                     </div>
                 </div>
