--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
                 <span></span>
             </div>
             <ul class="nav">
-                <li><a href="#home" class="active"><i class="fa fa-home"></i> Home</a></li>
-                <li><a href="#about"><i class="fa fa-user"></i> About</a></li>
-                <li><a href="#portfolio"><i class="fa fa-briefcase"></i> Portfolio</a></li>
-                <li><a href="#contact"><i class="fa fa-comments"></i> Contact</a></li>
+                <li><a href="#home" class="nav-link" id="home-link"><i class="fa fa-home"></i> Home</a></li>
+                <li><a href="#about" class="nav-link" id="about-link"><i class="fa fa-user"></i> About</a></li>
+                <li><a href="#portfolio" class="nav-link" id="portfolio-link"><i class="fa fa-briefcase"></i>
+                        Portfolio</a></li>
+                <li><a href="#contact" class="nav-link" id="
+                    contact-link"><i class="fa fa-comments"></i> Contact</a></li>
             </ul>
         </div>
         <!-- Aside End -->
