--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                         <!-- Contact info item start -->
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
-                            <h4>Address</h4>
+                            <h4>Office</h4>
                             <p>Jalgaon</p>
                         </div>
                         <!-- Contact info item End -->
