--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                             <p>Birthday : <span>10 May 2003</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Age : <span>21</span></p>
+                                            <p>Age : <span>22</span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Email : <span>wanimanishr@gmail.com</span></p>
@@ -119,7 +119,7 @@
                                     <div class="row">
                                         <div class="buttons">
                                             <a href="Resume.pdf" class="btn padd-15"
-                                                download="Resume_Manish Wani.pdf">Resume</a>
+                                                download="Manish_Wani_7709482693.pdf">Resume</a>
                                             <!-- <a href="#contact" class="btn hire-me padd-15">Hire Me</a> -->
                                         </div>
                                     </div>
@@ -212,10 +212,10 @@
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> Apr 2023 - May 2023
+                                                        <i class="fa fa-calendar"></i> July 2025 - Dec 2025
                                                     </h3>
-                                                    <h4 class="timeline-title">Web Development Internship</h4>
-                                                    <p class="timeline-text">Oasis Infobyte</p>
+                                                    <h4 class="timeline-title">Java Full stack Development internship</h4>
+                                                    <p class="timeline-text">VibrantMinds Technologies, Pune</p>
                                                 </div>
                                                 <!-- ==== timeline item ==== -->
                                             </div>
@@ -394,5 +394,6 @@
     <script src="js/script.js"></script>
     <script src="js/style-switcher.js"></script>
 </body>
+
 
 </html>
