--- a/index.html
+++ b/index.html
@@ -49,11 +49,7 @@
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, my name is <span class="name">Manish Wani</span></h3>
                             <h3 class="my-profession">I' m a <span class="typing">FullStack Developer</span></h3>
-                            <p>Passionate and detail-oriented Full Stack Developer with a strong foundation in web
-                                development and software
-                                engineering. Proficient in HTML, CSS, JavaScript, and Java, with a keen interest in
-                                building responsive and dynamic web
-                                applications.
+                            <p>A dedicated engineering graduate skilled in Java, Spring Boot, SQL, and full-stack development. I am eager to apply my knowledge in an entry-level Software Developer role and contribute to real-world projects while improving my technical abilities.
                             </p>
                             <a href="#contact" class="btn hire-me">Hire Me</a>
                         </div>
@@ -77,11 +73,7 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <h3>I'm Manish Wani and <span>Full Stack Developer</span></h3>
-                                    <p>Passionate and detail-oriented Full Stack Developer with a strong foundation in
-                                        web development and software
-                                        engineering. Proficient in HTML, CSS, JavaScript, and Java, with a keen interest
-                                        in building responsive and dynamic web
-                                        applications.</p>
+                                    <p>A dedicated engineering graduate skilled in Java, Spring Boot, SQL, and full-stack development. I am eager to apply my knowledge in an entry-level Software Developer role and contribute to real-world projects while improving my technical abilities.</p>
                                 </div>
                             </div>
                             <div class="row">
@@ -397,3 +389,4 @@
 
 
 </html>
+
