--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5>HTML</h5>
+                                            <h5>SQL</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width: 96%;"></div>
                                                 <div class="skill-percent">96%</div>
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5>CSS</h5>
+                                            <h5>Spring Boot</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width: 76%;"></div>
                                                 <div class="skill-percent">76%</div>
@@ -389,4 +389,5 @@
 
 
 </html>
+
 
