--- a/index.html
+++ b/index.html
@@ -248,9 +248,10 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="images\portfolio\portfolio-2.jpg" alt="">
+                                    <img src="ImageVBS.png" alt="">
                                 </div>
                             </div>
+                            <span>Vehicle Booking Platform</span>
                         </div>
                         <!-- Portfolio item End -->
                         <!-- Portfolio item start -->
@@ -389,5 +390,6 @@
 
 
 </html>
+
 
 
