--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, my name is <span class="name">Manish Wani</span></h3>
                             <h3 class="my-profession">I' m a <span class="typing">FullStack Developer</span></h3>
-                            <p>A dedicated engineering graduate skilled in Java, Spring Boot, SQL, and full-stack development. I am eager to apply my knowledge in an entry-level Software Developer role and contribute to real-world projects while improving my technical abilities.
+                            <p>A dedicated engineering graduate skilled in Java, Spring Boot, SQL, and full-stack
+                                development. I am eager to apply my knowledge in an entry-level Software Developer role
+                                and contribute to real-world projects while improving my technical abilities.
                             </p>
                             <a href="#contact" class="btn hire-me">Hire Me</a>
                         </div>
@@ -73,7 +75,10 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <h3>I'm Manish Wani and <span>Full Stack Developer</span></h3>
-                                    <p>A dedicated engineering graduate skilled in Java, Spring Boot, SQL, and full-stack development. I am eager to apply my knowledge in an entry-level Software Developer role and contribute to real-world projects while improving my technical abilities.</p>
+                                    <p>A dedicated engineering graduate skilled in Java, Spring Boot, SQL, and
+                                        full-stack development. I am eager to apply my knowledge in an entry-level
+                                        Software Developer role and contribute to real-world projects while improving my
+                                        technical abilities.</p>
                                 </div>
                             </div>
                             <div class="row">
@@ -206,7 +211,8 @@
                                                     <h3 class="timeline-date">
                                                         <i class="fa fa-calendar"></i> July 2025 - Dec 2025
                                                     </h3>
-                                                    <h4 class="timeline-title">Java Full stack Development internship</h4>
+                                                    <h4 class="timeline-title">Java Full stack Development internship
+                                                    </h4>
                                                     <p class="timeline-text">VibrantMinds Technologies, Pune</p>
                                                 </div>
                                                 <!-- ==== timeline item ==== -->
@@ -238,10 +244,11 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="Project1.jpg" alt="">
+                                    <img src="Notes.png" alt="">
                                 </div>
                             </div>
-                            <span>Bank Management System</span>
+                            <span>Notes Management System</span>
+                            <div class="proj-btn"><button class="btn-proj">View Project</button></div>
                         </div>
                         <!-- Portfolio item End -->
                         <!-- Portfolio item start -->
@@ -252,6 +259,9 @@
                                 </div>
                             </div>
                             <span>Vehicle Booking Platform</span>
+                            <div class="proj-btn"><button class="btn-proj"><a
+                                        href="https://github.com/manishwani999/Vehicle-Booking-Platform-Backend"
+                                        style="color: white;" target="_blank">View Project</a></button></div>
                         </div>
                         <!-- Portfolio item End -->
                         <!-- Portfolio item start -->
@@ -392,8 +402,3 @@
 
 
 </html>
-
-
-
-
-
